exports[`CommentFeedPostBody renders correctly for not original post 1`] = `
<div
  className="CommentFeedPostBody">
  <div>
    a
  </div>
</div>
`;

exports[`CommentFeedPostBody renders correctly for original post 1`] = `
<div
  className="CommentFeedPostBody">
  <h2>
    a
  </h2>
</div>
`;
